--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
+#bg-img {
+  background: url('erik-witsoe-GF8VvBgcJ4o-unsplash.jpg') center;
+  background-size: cover;
+  height: 60vh;
+}
