--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,9 +1,10 @@
 <h1>Bookmarks#new</h1>
 <p>Find me in app/views/bookmarks/new.html.erb</p>
 
-<%= simple_form_for @bookmarks do |f| %>
+<%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
   <%= f.association :movie %>
-  <%= f.association :lists %>
   <%= f.button :submit %>
 <% end %>
+
+<% #raise %>
