--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,9 @@
-<h1>HELLOOOOOOO</h1>
+<%= render 'navbarPages' %>
 
-<%= simple_form_for @list do |f| %>
-  <%= f.input :name, label: 'Your list name please', error: 'Name is mandatory, please specify one' %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container mt-5">
+<h1 class="mb-5">HELLOOOOOOO There. Please enter your list details</h1>
+  <%= simple_form_for @list do |f| %>
+    <%= f.input :name, label: 'Your list name please', error: 'Name is mandatory, please specify one' %>
+    <%= f.button :submit, class: 'btn btn-outline-success btn-dark' %>
+  <% end %>
+</div>
