--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,70 @@
 // Import page-specific CSS files here.
 @import "home";
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900");
+@import url("https://cdn.linearicons.com/free/1.0.0/icon-font.min.css");
+
+.pg-container {
+  height: 1000px;
+  position: relative;
+}
+
+
+.card {
+  height: max-content;
+}
+
+.card-image {
+  height: 1rem;
+}
+
+.card-icon-sm {
+  font-size: 22px;
+  color: black;
+}
+
+.next-icons {
+  font-size: 35px;
+  color: rgba(0,0,0,0.8);
+}
+
+.card-icon-md {
+  font-size: 25px;
+  color: rgba(250,250,250,0.8);
+}
+.bg-clear {
+  background-color: rgba(17, 19, 34, 0.05);
+}
+
 #bg-img {
   background: url('erik-witsoe-GF8VvBgcJ4o-unsplash.jpg') center;
   background-size: cover;
   height: 60vh;
+}
+
+.footer {
+  background: #F4F4F4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  width: 100vw;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+}
+.footer-links {
+  display: flex;
+  align-items: center;
+}
+.footer-links a {
+  color: black;
+  opacity: 0.15;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 0px 10px;
+}
+.footer-links a:hover {
+  opacity: 1;
+}
+.footer .fa-heart {
+  color: #D23333;
 }
