--- a/app/views/bookmarks/_navbarPages.html.erb
+++ b/app/views/bookmarks/_navbarPages.html.erb
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
-  <%= link_to 'Listify', lists_path, class: 'navbar-brand font-weight-bolder'  %>
+  <%= link_to 'List Me', lists_path, class: 'navbar-brand'  %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to 'Home', lists_path, class: 'nav-link'  %><span class="sr-only">(Home)</span></a>
+      <li class="nav-item active">
+        <%= link_to 'Home', lists_path, class: 'navbar-brand nav-link'  %><span class="sr-only">(Home)</span></a>
       </li>
       <li class="nav-item">
-        <%= link_to 'Create List', new_list_path, class: 'nav-link'  %><span class="sr-only">(Create List)</span></a>
+        <%= link_to 'Create List', new_list_path, class: 'navbar-brand nav-link'  %><span class="sr-only">(Create List)</span></a>
       </li>
     </ul>
     <form class="d-flex my-2 my-lg-0">
