--- a/app/views/lists/_navbar.html.erb
+++ b/app/views/lists/_navbar.html.erb
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
-  <%= link_to 'List Me', lists_path, class: 'navbar-brand'  %>
+  <%= link_to 'Listify', lists_path, class: 'navbar-brand font-weight-bolder'  %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <%= link_to 'Home', lists_path, class: 'navbar-brand nav-link'  %><span class="sr-only">(Home)</span></a>
+      <li class="nav-item">
+        <%= link_to 'Home', lists_path, class: 'nav-link'  %><span class="sr-only">(Home)</span></a>
       </li>
       <li class="nav-item">
-        <%= link_to 'Create List', new_list_path, class: 'navbar-brand nav-link'  %><span class="sr-only">(Create List)</span></a>
+        <%= link_to 'Create List', new_list_path, class: 'nav-link'  %><span class="sr-only">(Create List)</span></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Your Lists
         </a>
-        <div class="dropdown-menu mt-3" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu p-1 mt-3" aria-labelledby="navbarDropdown">
             <% @lists[0..7].each do |list| %>
             <%= link_to list.name, list_path(list), class: 'dropdown-item'  %><span class="sr-only">(List Item)</span></a>
             <div class="dropdown-divider"></div>
