--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -36,7 +36,7 @@
 }
 
 #bg-img {
-  background: url('erik-witsoe-GF8VvBgcJ4o-unsplash.jpg') center;
+  background: asset-url('/assets/erik-witsoe-GF8VvBgcJ4o-unsplash.jpg') center;
   background-size: cover;
   height: 60vh;
 }
